crates/forward-compatible-enum/tests/ui/unknown_attribute.stderr
error: unknown attribute in forward_compatible
 --> tests/ui/unknown_attribute.rs:4:22
  |
4 | #[forward_compatible(unknown_attribute = "value")]  // Unknown attribute!
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/unknown_attribute.rs:9:2
  |
9 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/unknown_attribute.rs`
